Fixing grid collapse

--- a/assets/css/templatemo-breezed.css
+++ b/assets/css/templatemo-breezed.css
@@ -316,13 +316,13 @@ a.text-button-icon:hover i {
   overflow-y: auto;
 }
 #demoVideo{
-  /*max-width:100% !important;
+  max-width:100% !important;
   display: block;
   outline: none;
-  overflow-y: auto;*/
+  overflow-y: auto;
 
    
-      right: 0; 
+      /*right: 0; 
       bottom: 0;
       max-width: 100%; 
       min-height: 100%;
@@ -331,15 +331,22 @@ a.text-button-icon:hover i {
       z-index: -100;
       background-size: cover;
       overflow-y: hidden;
-
-      display: flex;
-
-
+*/
+/*display: flex;*/
 
 }
+
 .modal-body{
   width:100% !important;
   overflow-y: auto;
+}
+
+
+.grid{
+  min-height: 500px;
+}
+.all{
+  min-height: 280px;
 }
 
 
